--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
                         <option value="carm">C-arm</option>
                         <option value="trophon">Trophon EPR</option>
                         <option value="trophon2">Trophon 2</option>
+                        <option value="petct">PET/CT</option>
+                        <option value="nucmed">Nuclear Medicine</option>
                     </select> 
                 </div>
                 <div class="manufactureRow">
