--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                         <option value="bidc">BID - Chelsea</option>
                         <option value="chestnut hill">BID - Chestnut Hill</option>
                         <option value="mount auburn">Mount Auburn</option>
+                        <option value="nebh">NEBH</option>
                         <option value="lahey">Lahey - Burlington</option>
                         <option value="lahey peabody">Lahey - Peabody</option>
                         <option value="lexington">BID - Lexington</option>
